--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:mariadb://localhost:3308/mentortools?useUnicode=true
+#spring.datasource.url=jdbc:mariadb://localhost:3308/mentortools?useUnicode=true
 #spring.datasource.username=employees
 #spring.datasource.password=employees
-spring.datasource.username=mentortools
-spring.datasource.password=mentortools
+#spring.datasource.username=mentortools
+#spring.datasource.password=mentortools
+
+spring.datasource.url=jdbc:mariadb://localhost:3308/masterpiece?useUnicode=true
+spring.datasource.username=masterpiece
+spring.datasource.password=masterpiece
 
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=none
 
-logging.level.library = debug
+#logging.level.library = debug
 
 #server.port=8081
